--- a/src/components/DefaultInput/styles.module.css
+++ b/src/components/DefaultInput/styles.module.css
@@ -1,18 +1,21 @@
 .input{
-    background: transparent;
-    border: none;
+    background-color: transparent;
+
+    text-align: center;
     font-size: 1.8rem;
     color: var(--text-default);
 
     padding: 0.8rem;
-    border-radius: 0.8rem;
-    text-align: center;
-
+    /* border-radius: 0.8rem; */
     outline: none;
+
     border: 0.2rem solid transparent;
+    border-bottom: 0.2rem solid var(--primary);
+    transition: all 0.1s ease-in-out;
 }
 
 .input:focus {
+    border-radius: 0.8rem;
     border: 0.2rem solid var(--primary);
 }
 
@@ -20,4 +23,9 @@
     color: var(--gray-500);
     font-size: 1.4rem;
     font-style: italic;
+}
+
+.input:disabled {
+    border-bottom: 0.2rem solid var(--disabled);
+    color: var(--text-muted);
 }
